[gd_scene load_steps=4 format=3 uid="uid://dibf3kpwuu3xn"]

[ext_resource type="Script" path="res://scripts/dailogue_overlay.gd" id="1_c41ku"]
[ext_resource type="AudioStream" uid="uid://dbuycgqxfuubb" path="res://sounds/beep_message.ogg" id="2_hrnjh"]
[ext_resource type="FontFile" uid="uid://dhx86ubdfg1bl" path="res://fonts/PixelOperator8.ttf" id="2_ue8f0"]

[node name="DailogueOverlay" type="Node2D"]
script = ExtResource("1_c41ku")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 424.0
color = Color(0, 0, 0, 1)

[node name="PlayerOneDailogues" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("2_ue8f0")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoDailogues" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 960.0
offset_right = 1920.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("2_ue8f0")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hrnjh")
bus = &"Player"
